move shaders into <script> tags in the .html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
         <center>
             <canvas id="canvas"></canvas>
         </center>
+        <script type="x-shader/x-vertex" id="vertex-shader">
+            attribute vec4 aVertexPosition;
+            attribute vec4 aVertexColor;
+            uniform mat4 uModelViewMatrix;
+            uniform mat4 uProjectionMatrix;
+            varying lowp vec4 vColor;
+
+            void main(void) {
+                gl_Position = uProjectionMatrix * uModelViewMatrix * aVertexPosition;
+                vColor = aVertexColor;
+            }
+        </script>
+        <script type="x-shader/x-fragment" id="fragment-shader">
+            varying lowp vec4 vColor;
+            void main(void) {
+                lowp vec4 foo = vec4(1.0, 1.0, 1.0, 1.0);
+                foo.r = vColor.r;
+                foo.g = vColor.b;
+                gl_FragColor = foo;
+            }
+        </script>
         <script src="lib/gl-matrix.js"></script>
         <script src="script.js"></script>
     </body>
