remove <center> tag

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 min-height: 100vh;
                 padding: 0 1em;
                 margin: 0;
+                text-align: center;
             }
             #canvas {
                 margin: 10pt;
@@ -24,9 +25,7 @@
         </style>
     </head>
     <body>
-        <center>
-            <canvas id="canvas"></canvas>
-        </center>
+        <canvas id="canvas"></canvas>
         <script type="x-shader/x-vertex" id="vertex-shader">
             attribute vec4 aVertexPosition;
             attribute vec4 aVertexColor;
