--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </head>
     <body>
         <canvas id="canvas"></canvas>
-        <script type="x-shader/x-vertex" id="vertex-shader">#version 300 es
+        <script type="x-shader/x-vertex" id="vertex-shader">
+            #version 300 es
             in vec4 aVertexPosition;
             in vec4 aVertexColor;
             uniform mat4 uModelViewMatrix;
@@ -38,7 +39,8 @@
                 vColor = aVertexColor;
             }
         </script>
-        <script type="x-shader/x-fragment" id="fragment-shader">#version 300 es
+        <script type="x-shader/x-fragment" id="fragment-shader">
+            #version 300 es
             precision highp float;
             in vec4 vColor;
             out vec4 outColor;
