--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             }
         </script>
         <script src="lib/gl-matrix.js"></script>
+        <script src="plumbing.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
