--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Game</title>
+        <title>Morphogen</title>
         <style type="text/css">
             html {
                 background: linear-gradient(0deg, #000, rgba(0,0,0,0.5)),
@@ -52,6 +52,6 @@
         </script>
         <script src="lib/gl-matrix.js"></script>
         <script src="plumbing.js"></script>
-        <script src="script.js"></script>
+        <script src="morphogen.js"></script>
     </body>
 </html>
