add shadow around canvas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 height: 600px;
                 width: 800px;
                 background: #000;
-                box-shadow: 0 0 5px black;
+                box-shadow: 0 0 10px #429;
             }
         </style>
     </head>
