Implement Transform Feedback to read data from vertex shader
This is in preparation for a feature to compute the movement of
particles inside the vertex shader

Note: it now only draws half a rectangle. :-/

- https://www.khronos.org/opengl/wiki/Transform_Feedback
- https://developer.mozilla.org/en-US/docs/Web/API/WebGLTransformFeedback
- Thanks to the people in https://stackoverflow.com/questions/62248441/callback-on-transform-feedback-to-prevent-getbuffersubdata-graphics-pipeline-sta

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
             #version 300 es
             in vec4 aVertexPosition;
             in vec4 aVertexColor;
+            out float answer;
             out lowp vec4 vColor;
 
             void main() {
                 gl_Position = aVertexPosition;
                 vColor = aVertexColor;
+                answer = aVertexPosition.x * float(42);
             }
         </script>
         <script type="x-shader/x-fragment" id="fragment-shader">
