--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             uniform vec2 allPositions[4];
             out vec2 newPos;
             out vec2 newV;
-            out lowp vec4 vColor;
+            out lowp vec4 color;
 
             void main() {
                 gl_Position = aVertexPosition;
-                vColor = aVertexColor;
+                color = aVertexColor;
                 float dampening = 1.0 - 0.003 * float(myIndex + 1);
 
                 vec2 particle_pos;
@@ -61,13 +61,9 @@
         <script type="x-shader/x-fragment" id="fragment-shader">
             #version 300 es
             precision highp float;
-            in vec4 vColor;
+            in vec4 color;
             out vec4 outColor;
-            void main() {
-                outColor = vec4(1.0, 1.0, 1.0, 1.0);
-                outColor.r = vColor.r;
-                outColor.g = vColor.b;
-            }
+            void main() { outColor = color; }
         </script>
         <script src="plumbing.js"></script>
         <script src="morphogen.js"></script>
