--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
 
                 newPos.x = aVertexPosition.x + aVertexVelocity.x;
                 newPos.y = aVertexPosition.y + aVertexVelocity.y;
+                if (newPos.x < -1.0) {
+                    newPos.x = -1.0;
+                }
+                if (newPos.x > 1.0) {
+                    newPos.x = 1.0;
+                }
+                if (newPos.y < -1.0) {
+                    newPos.y = -1.0;
+                }
+                if (newPos.y > 1.0) {
+                    newPos.y = 1.0;
+                }
                 newV.x = aVertexVelocity.x - dist.x / 10000.0;
                 newV.y = aVertexVelocity.y - dist.y / 10000.0;
             }
