--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         <canvas id="canvas"></canvas>
         <script type="x-shader/x-vertex" id="vertex-shader">
             #version 300 es
+            const int particleLimit = 10;
+            uniform vec2 allPositions[particleLimit];
             in vec4 aVertexPosition;
             in vec4 aVertexVelocity;
             in int myIndex;
-            uniform vec2 allPositions[4];
             out vec2 newPos;
             out vec2 newV;
             out lowp vec4 color;
@@ -42,11 +43,11 @@
                 vec2 particle_pos;
                 vec2 center_of_mass;
                 center_of_mass = vec2(0.0, 0.0);
-                for (int i = 0; i < 4; i++) {
+                for (int i = 0; i < particleLimit; i++) {
                     particle_pos = allPositions[i];
                     center_of_mass += particle_pos;
                 }
-                center_of_mass /= 5.0;  // Not by 4.0 to create a bias towards the center
+                center_of_mass /= float(particleLimit + 2);
                 vec2 dist = allPositions[myIndex] - center_of_mass;
 
                 newPos.x = aVertexPosition.x + aVertexVelocity.x;
