--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
         <meta charset="utf-8">
         <title>Morphogen</title>
         <style type="text/css">
-            html {
-                background: linear-gradient(0deg, #000, rgba(0,0,0,0.5)),
-                            linear-gradient(90deg, #000, #77f, #000);
-                background-attachment: fixed;
-            }
             body {
+                background: radial-gradient(circle at top, #336, #000 75%);
                 min-height: 100vh;
                 padding: 0 1em;
                 margin: 0;
